--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.6",
-    "@angular/cdk": "^16.2.6",
+    "@angular/cdk": "^17.0.2",
     "@angular/common": "^17.0.6",
     "@angular/compiler": "^17.0.6",
     "@angular/core": "^17.0.6",
     "@angular/forms": "^17.0.6",
-    "@angular/material": "^16.2.6",
+    "@angular/material": "^17.0.2",
     "@angular/platform-browser": "^17.0.6",
     "@angular/platform-browser-dynamic": "^17.0.6",
     "@angular/router": "^17.0.6",
     "bootstrap": "^5.0.1",
     "jquery": "^3.3.1",
+    "keycloak-angular": "^15.0.0",
+    "keycloak-js": "^22.0.5",
     "popper.js": "^1.14.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.9.0",
